--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Angelo Bartsch
 Maintainer: The package maintainer <angelo.bartsch@uv.cl>
 Description: Algunas funciones básicas para análisis estadístico
-License: No license
+License: Sin licencia
 Depends: R (>= 3.1.0), readxl
 Encoding: UTF-8
 LazyData: true
